# privacy-x402

./: .gitignore  .gitmodules  Anchor.toml  Arcium.toml  CLAUDE.md  Cargo.toml  README.md  claude-session.jsonl  codex-session.jsonl  grant-application-draft.md  package.json  skills-lock.json  tsconfig.json
.agents/skills/light-sdk/: SKILL.md
.agents/skills/light-sdk/references/: spl-to-light.md
.agents/skills/light-token-client/: SKILL.md
.agents/skills/light-token-client/references/: approve.md  burn-checked.md  burn.md  create-associated-token-account.md  create-mint.md  delegate-transfer.md  load-associated-token-account.md  mint-to.md  revoke.md  spl-to-light.md  transfer-checked.md  transfer-interface.md  unwrap.md  wrap.md
.agents/skills/light-token-client/references/extensions/: close-mint.md  confidential-transfer.md  default-account-state.md  interest-bearing-tokens.md  metadata-and-metadata-pointer.md  overview.md  pausable-mint.md  permanent-delegate.md  token-groups-and-members.md  transfer-fees.md  transfer-hook.md
.agents/skills/payments/: SKILL.md
.agents/skills/payments/references/: gasless-transactions.md  production-readiness.md  receive-payments.md  register-spl-mint.md  send-payments.md  show-balance.md  spend-permissions.md  spl-to-light.md  transaction-history.md  unwrap-to-spl.md  verify-address.md  wrap-from-spl.md
.agents/skills/payments/references/extensions/: confidential-transfer.md  metadata-and-metadata-pointer.md  overview.md  pausable-mint.md  transfer-fees.md
.agents/skills/solana-compression/: SKILL.md
.agents/skills/solana-compression/references/: spl-to-light.md
.agents/skills/solana-rent-free-dev/: skill.md
.agents/skills/testing/: SKILL.md
.agents/skills/testing/references/: accounts.md  addresses.md  devnet.md  local.md
.agents/skills/token-distribution/: SKILL.md
.agents/skills/token-distribution/references/: spl-to-light.md
.claude/: MEMORY.md
.claude/projects/-Users-yukikimura-work-subly/memory/: MEMORY.md  project_architecture_decision.md  project_hackathon_strategy.md
.claude/skills/: alchemy-cli  alchemy-codex  payments  solana-rent-free-dev
artifacts/: circuits_hash.txt
docs/: a402-nitro-deployment.md  a402-solana-design.md  a402-svm-v1-protocol.md  architecture-public.md  architecture.md  demo-side-by-side.md  devnet-setup.md  idea-evaluation-privacy-payfi-ai-agents.md  nitro-devnet-deploy.md  nitro-rollout.md  phase5-arcium-design.md  quickstart.md  redeploy-devnet.md
enclave/: Cargo.toml
enclave/src/: adaptor_sig.rs  admin_auth.rs  asc_manager.rs  attestation.rs  audit.rs  batch.rs  deposit_detector.rs  error.rs  handlers.rs  interconnect.rs  kms_bootstrap.rs  main.rs  outbound.rs  provider_attestation.rs  snapshot.rs  snapshot_store.rs  state.rs  tls.rs  wal.rs
encrypted-ixs/src/: lib.rs
infra/nitro/: README.md
infra/nitro/enclave/: Dockerfile  entrypoint.sh
infra/nitro/env/: enclave.env.example  parent.env.example  watchtower.env.example
infra/nitro/systemd/: a402-parent.service  a402-watchtower.service  subly402-parent.service  subly402-watchtower.service
infra/nitro/terraform/: main.tf  outputs.tf  variables.tf
middleware/: README.md  package.json  tsconfig.json
middleware/src/: asc.ts  facilitator.ts  index.ts  middleware.ts  subly402.ts  types.ts
parent/: Cargo.toml
parent/src/: egress_relay.rs  ingress_relay.rs  interconnect.rs  kms_proxy.rs  main.rs  snapshot_store.rs
programs/a402_vault/: Cargo.toml
programs/a402_vault/src/: asc_claim.rs  batch_hash.rs  constants.rs  ed25519_utils.rs  error.rs  lib.rs
programs/a402_vault/src/instructions/: announce_migration.rs  force_settle_challenge.rs  force_settle_finalize.rs  force_settle_init.rs  mod.rs  record_audit.rs  settle_vault.rs  withdraw.rs
programs/a402_vault/src/state/: asc_close_claim.rs  audit_record.rs  force_settle_request.rs  mod.rs  used_withdraw_nonce.rs  vault_config.rs
programs/subly402_vault/: Cargo.toml
programs/subly402_vault/src/: asc_claim.rs  batch_hash.rs  constants.rs  ed25519_utils.rs  error.rs  lib.rs
programs/subly402_vault/src/instructions/: arcium_mirror.rs  asc_close_claim.rs  deposit.rs  deposit_with_credit.rs  force_settle_challenge.rs  force_settle_init.rs  initialize_arcium_config.rs  initialize_vault.rs  mod.rs  pause_vault.rs  record_audit.rs  record_yield_epoch.rs  retire_vault.rs  rotate_auditor.rs  set_arcium_status.rs  withdraw.rs
programs/subly402_vault/src/state/: arcium_phase5.rs  audit_record.rs  mod.rs  used_withdraw_nonce.rs
scripts/demo/: common.js  compare.js  direct-x402-demo.js  four-way-common.js  public-seller-host.js  scenario.js  solana-kit.js  subly-agent-demo.js  subly402-buyer.js  subly402-seller.js  url-swap-diff.js  x402-official-buyer.js  x402-official-seller.js
scripts/devnet/: arcium-config.js  bootstrap.js  common.js  smoke.js  start-stack.sh  start.js  status.js  stop-stack.sh
scripts/nitro/: build-eif.sh  common.js  describe-enclave.sh  e2e.js  prepare.js  provision.js  register-providers.js  run-enclave.sh  start-parent.sh  start-watchtower.sh  terminate-enclave.sh
sdk/: README.md  package.json
sdk/src/: arcium.ts  attestation.ts  audit.ts  client.ts  crypto.ts  index.ts  receipt.ts  subly402.ts  tls.ts  types.ts
skills/: alchemy-cli  alchemy-codex
tests/: a402_vault.ts  arcium_config_script.ts  arcium_idl.ts  arcium_sdk.ts  asc_provider_helper.ts  attestation_sdk.ts  audit_tool.ts  enclave_api.ts  enclave_surfpool_e2e.ts  live_transport.ts  middleware_raw_body.ts  provider_attestation.ts  subly402_interface.ts  subly402_vault.ts
watchtower/: Cargo.toml
watchtower/src/: challenger.rs  main.rs  receipt_store.rs
