[package]
name = "a402-enclave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "a402-enclave"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
hyper = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "2.2"
anchor-client = "0.32.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dashmap = "6"
hex = "0.4"
