[package]
name = "subly402-enclave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subly402-enclave"
path = "src/main.rs"

[dependencies]
subly402_vault = { path = "../programs/subly402_vault", features = ["cpi"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
hkdf = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "2.2"
anchor-client = "0.32.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dashmap = "6"
hex = "0.4"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
solana-message = "2.4.0"
solana-rpc-client = "2.3.13"
solana-rpc-client-api = "2.3.13"
solana-sdk-ids = "2.2.1"
solana-transaction-status-client-types = "2.3.13"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["pem"] }
openssl = "0.10"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }
webpki-roots = "0.26"
x509-parser = "0.16"
serde_bytes = "0.11"
serde_cbor = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7.2"
aws-nitro-enclaves-nsm-api = "0.4.0"
