[package]
name = "subly402-parent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subly402-parent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aws-config = { version = "=1.8.0", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-kms = "=1.99.0"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7.2"
