[package]
name = "a402-watchtower"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "a402-watchtower"
path = "src/main.rs"

[dependencies]
a402_vault = { path = "../programs/a402_vault", features = ["cpi"] }
anchor-client = "0.32.1"
solana-sdk = "2.2"
solana-rpc-client = "2.3.13"
solana-rpc-client-api = "2.3.13"
solana-transaction-status-client-types = "2.3.13"
spl-token = "8.0.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dashmap = "6"
hex = "0.4"
sha2 = "0.10"
